animation added and resizing img & minify codes

--- a/styles.css
+++ b/styles.css
@@ -1,118 +1,1 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-body {
-	background-color: #0a3d62;
-	color: white;
-}
-
-.container {
-	margin: 25px auto;
-}
-
-.title, .sub-title {
-	text-align: center;
-	margin: 25px auto;
-	letter-spacing: 1.1px;
-}
-
-.underline {
-	margin: -15px auto 0 auto;
-	width: 200px;
-	height: 1.5px;
-	background-color: #78e08f;
-}
-.cards {
-	margin: 25px auto;
-	width: 80vw;
-	max-width: 1200px;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.card {
-	width: 350px;
-	margin: 50px auto;
-	text-align: center;
-	padding: 0 25px 15px;
-	box-shadow: 0 20px 25px 5px rgb(0 0 0 / 0.8), 0 8px 10px -2px rgb(0 0 0 / 0.8);
-	border-radius: 15px;
-}
-
-.profil {
-	height: 100%;
-	margin: 0 auto;
-	display: flex;
-	justify-content: space-between;
-	flex-direction: column;
-	align-items: center;
-}
-p {
-	letter-spacing: 1.1px;
-}
-
-img {
-	width: 200px;
-	height: auto;
-	border-radius: 15px;
-}
-
-.description {
-	margin: 0 auto;
-	padding: 5px;
-}
-
-ul {
-	margin: 25px auto 0 auto;
-	display: flex;
-	flex-wrap: wrap;
-	row-gap: 15px;
-}
-
-li {
-	width: 100%;
-	list-style: none;
-	text-align: center;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-}
-
-span {
-	margin-right: 7px;
-	letter-spacing: 1.1px;
-}
-a {
-	text-decoration: none;
-	color: #0a3d62;
-}
-
-.btn-link {
-	cursor: pointer;
-	background-color: #fad390;
-	border: transparent;
-	border-radius: 5px;
-	letter-spacing: 1.2px;
-	padding: 0.375rem 0.75rem;
-	transition: ease-in 0.25s ;
-	text-transform: capitalize;
-	display: inline-block;
-}
-
-.btn-link:hover {
-	background-color: #f8c291;
-	box-shadow: 0 2px 5px 5px rgb(0 0 0 / 0.2),	0 2px 10px 6px rgb(0 0 0 / 0.2);
-}
-
-footer {
-	margin: 150px auto 0 auto;
-	text-align: center;
-	height: auto;
-	background-color: #0c2461;
-	padding: 15px 0;
-	line-height: 20px;
-	box-shadow: 2px 2px 8px rgb(0 0 0 / 0.8);
-}
+*{margin:0;padding:0;box-sizing:border-box}.container,.sub-title,.title{margin:25px auto}.card,img{border-radius:15px}.cards,.profil,li,ul{display:flex}.sub-title,.title,p,span{letter-spacing:1.1px}.card,.sub-title,.title,footer,li{text-align:center}footer,img{height:auto}body{background-color:#0a3d62;color:#fff}.underline{margin:-15px auto 0;width:200px;height:1.5px;background-color:#78e08f}.cards{margin:25px auto;width:80vw;max-width:1200px;flex-wrap:wrap}.card{width:350px;margin:50px auto;padding:15px 25px;box-shadow:0 20px 25px 5px rgb(0 0 0 / .8),0 8px 10px -2px rgb(0 0 0 / .8);animation:2s ease-in-out bounceEffect}.card:hover{box-shadow:inset -5px -5px 20px #000,inset 5px 10px 20px #000}@keyframes bounceEffect{0%{transform:scale(1.1);opacity:0}50%{transform:scale(.8);opacity:.5}75%{transform:scale(1.07);opacity:.75}100%{transform:scale(1);opacity:1}}.profil{height:100%;margin:0 auto;justify-content:space-between;flex-direction:column;align-items:center}.container-img{overflow:hidden;width:100%}img{width:200px;transition:.7s}.container-img img:hover{transform:scale(1.1)}.description{margin:0 auto;padding:5px}ul{margin:25px auto 0;flex-wrap:wrap;row-gap:15px}li{width:100%;list-style:none;align-items:center;justify-content:space-around}span{margin-right:7px}a{text-decoration:none;color:#0a314d}.btn-link,.para p{text-transform:capitalize}.btn-link{cursor:pointer;background-color:#fad390;border:transparent;border-radius:5px;letter-spacing:1.2px;padding:.375rem .75rem;transition:.2s ease-in-out;display:inline-block}.btn-link:hover{scale:0.99;background-color:#f8c291;box-shadow:inset 1px 2px 1px #c5a689,-2px -2px 1px}footer{margin:150px auto 0;background-color:#0c2461;padding:15px 0;line-height:20px;box-shadow:2px 2px 8px rgb(0 0 0 / .8)}
